--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,44 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <!-- Main Menu -->
         <activity
-                android:name=".RectangleCalculator"
-                android:label="@string/app_name"
+                android:name=".MainMenu"
+                android:label="@string/title_activity_main_menu"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".RectangleCalculator"
+                android:label="@string/title_activity_rectangle"
+                android:parentActivityName=".MainMenu"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="shapirohousehold.com.shapecalculator.MainMenu"/>
+        </activity>
+        <activity
+                android:name=".CircleCalculator"
+                android:label="@string/title_activity_circle_calculator"
+                android:parentActivityName=".MainMenu"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="shapirohousehold.com.shapecalculator.MainMenu"/>
+        </activity>
+        <activity
+                android:name=".TriangleCalculator"
+                android:label="@string/title_activity_triangle_calculator"
+                android:parentActivityName=".MainMenu"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="shapirohousehold.com.shapecalculator.MainMenu"/>
         </activity>
     </application>
 
